--- a/modules/raw/waybar/style.css
+++ b/modules/raw/waybar/style.css
@@ -1,8 +1,8 @@
 * {
     border: none;
     border-radius: 0px;
-    font-family: RobotoMono Nerd Font;
-    font-size: 14px;
+    font-family: Terminus Nerd Font;
+    font-size: 15px;
     min-height: 0;
 }
 
